syntax = "proto3";

package productPackage;

message Product{
    string _id = 1;
    string title = 2;
    string price = 3;
}
message Result {
    string result = 1;
}
message ProductList {
    repeated Product products = 1;
}
message ProductId {
    string id = 1;
}
message NewProduct {
    string title = 1;
    string price = 2;
}
message Empty {}
service ProductService{
    rpc productList (Empty) returns (ProductList);
    rpc getProduct (ProductId) returns (Product);
    rpc createProduct (NewProduct) returns (Result);
    rpc updateProduct (Product) returns (Result);
    rpc removeProduct (ProductId) returns (Result);
}